GNOME Bugzilla – Bug 667609
Changes to wacom have no effect
Last modified: 2012-01-10 10:01:55 UTC
Created attachment 204924 [details] [review] Patch to fix g-c-c Changing settings in the Wacom panel does not result in the settings being applied or saved. Looking further into the issue, it appears that gsettings is getting confused over the relocateable path. Specifically, the lack of a trailing slash causes it to interpret the final piece of the path (e.g. "usb:0x56a:0x15") as part of the key name. Patches attached for gnome-control-center. Similar patch to gnome-settings-daemon also required.
Created attachment 204925 [details] [review] Patch to fix g-s-d
>Path names must end in a trailing slash. Without it, the varous >g_settings_* functions get confused about where to seperate the "various" and "separate" >@@ -374,7 +374,7 @@ add_stylus_to_device (GsdWacomDevice *device, > libwacom_stylus_is_eraser (wstylus) == FALSE) > return; > >- stylus_settings_path = g_strdup_printf ("%s/0x%x", settings_path, id); >+ stylus_settings_path = g_strdup_printf ("%s0x%x/", settings_path, id); looks like you dropped a / here, is this intended?
Yes, it's correct (patches were verified to work on my system). settings_path is just a printf of WACOM_DEVICE_CONFIG_BASE, so it already has the trailing slash. The dropped slash in this hunk would have been a duplicate. It'd be nice if g_settings_new_with_path just appended a trailing slash if needed (or spat out a warning/assertion)...
In that case, Reviewed-by: Peter Hutterer <peter.hutterer@who-t.net> for both of them