wacom: Add trailing slash to schema path

Path names must end in a trailing slash. Without it, the varous
g_settings_* functions get confused about where to seperate the
key and value.

https://bugzilla.gnome.org/show_bug.cgi?id=667609